--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -22,7 +22,6 @@ body{
   min-height: 100vh;
   display: flex;
   align-items: center;
-  flex-direction: column;
   justify-content: center;
 }
 
@@ -136,14 +135,22 @@ body{
       @include flexbox(center, center, column);
       padding: 1.8rem 0;
       width: 100%;
+      height: 100%;
 
       .page_link{
         width: 100%;
-        padding: 1rem 1rem;
+        padding: .75rem 1rem;
         @include flexbox(start, center, row);
 
         & > span:nth-child(1){
-          width: 22px;
+          width: 24px;
+
+          @media(max-width: 1040px){
+            width: 22px;
+          }
+          @media(max-width: 780px){
+            width: 20px;
+          }
     
           img{
             width: 100%;
@@ -159,6 +166,7 @@ body{
 
           @media(max-width: 1040px){
             display: none;
+            font-size: 14px;
           }
           @media(max-width: 780px){
             font-size: 12px;
@@ -275,7 +283,7 @@ body{
         }
       }
       .sidebar_toggle{
-        @include flexbox(end, center);
+        //@include flexbox(end, center);
         span{
           transform: rotateY(180deg);
         }
