Dashboard UI further refined

--- a/webApp/views/partials/sidebar.hbs
+++ b/webApp/views/partials/sidebar.hbs
@@ -9,9 +9,11 @@
     </div>
 
     <div class="sidebar_toggle">
-      <span>
-        <img src="assets/icons/sidebar_toggle.svg" alt="toggle" class="toggler">
-      </span>
+      <div class="black_box">
+        <span>
+          <img src="assets/icons/sidebar_toggle.svg" alt="toggle" class="toggler">
+        </span>
+      </div>
     </div>
 
     {{!-- <div class="toggle_sidebar">
