--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -66,6 +66,11 @@ body {
   width: 100%;
   padding-left: 1rem;
 }
+@media (max-width: 600px) {
+  .skeleton .sidebar .logo .quantiq {
+    padding-left: 0.65rem;
+  }
+}
 .skeleton .sidebar .logo .quantiq > span:nth-child(1) {
   width: 30px;
 }
@@ -87,16 +92,32 @@ body {
 .skeleton .sidebar .logo .sidebar_toggle {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
 }
-.skeleton .sidebar .logo .sidebar_toggle span {
-  width: 22px;
-  height: 22px;
+@media (max-width: 1040px) {
+  .skeleton .sidebar .logo .sidebar_toggle {
+    margin-left: 18px;
+  }
+}
+.skeleton .sidebar .logo .sidebar_toggle .black_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  background-color: rgb(15, 15, 15);
+  margin-top: 8px;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+}
+.skeleton .sidebar .logo .sidebar_toggle .black_box span {
+  width: 20px;
+  height: 20px;
   border: 1.85px solid rgb(169, 167, 167);
-  z-index: 120;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -104,38 +125,24 @@ body {
   flex-direction: row;
   flex-wrap: nowrap;
   background-color: rgb(204, 201, 201);
-  margin-top: 8px;
   transition: 1s ease;
 }
 @media (min-width: 1035px) {
-  .skeleton .sidebar .logo .sidebar_toggle span {
+  .skeleton .sidebar .logo .sidebar_toggle .black_box span {
     display: none;
   }
 }
-.skeleton .sidebar .logo .sidebar_toggle span img {
+.skeleton .sidebar .logo .sidebar_toggle .black_box span img {
   width: 14px;
   opacity: 0.65;
 }
-.skeleton .sidebar .logo .sidebar_toggle span:hover {
+.skeleton .sidebar .logo .sidebar_toggle .black_box span:hover {
   background-color: aliceblue;
-}
-.skeleton .sidebar .logo .toggle_sidebar {
-  width: 32px;
-}
-.skeleton .sidebar .logo .toggle_sidebar img {
-  width: 100%;
-}
-@media (min-width: 1025px) {
-  .skeleton .sidebar .logo .toggle_sidebar img:nth-child(1) {
-    display: none;
-  }
-}
-.skeleton .sidebar .logo .toggle_sidebar .hidden {
-  display: none;
+  cursor: pointer;
 }
 .skeleton .sidebar .pages {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -172,7 +179,7 @@ body {
   font-size: 0.9rem;
   font-weight: 500;
   margin-left: 1.25rem;
-  color: rgb(150, 205, 223);
+  color: rgb(202, 207, 208);
 }
 @media (max-width: 1040px) {
   .skeleton .sidebar .pages .page_link > span:nth-child(2) {
@@ -189,13 +196,10 @@ body {
   background-color: rgb(28, 28, 29);
 }
 .skeleton .sidebar .pages .page_link:hover > span:nth-child(2) {
-  color: rgb(187, 218, 226);
+  color: rgb(223, 227, 227);
 }
-.skeleton .sidebar .pages .page_link:active {
-  background-color: rgb(28, 28, 29);
-}
-.skeleton .sidebar .pages .page_link:active > span:nth-child(2) {
-  color: rgb(187, 218, 226);
+.skeleton .sidebar .pages > a:nth-child(9) {
+  margin-top: auto;
 }
 .skeleton .parent_container {
   display: flex;
@@ -223,7 +227,8 @@ body {
   flex-wrap: nowrap;
   width: 100%;
   padding: 1.35rem 0.75rem 0.85rem 0.75rem;
-  border-bottom: 1.5px solid lightgray;
+  border-bottom: 1.6px solid rgb(236, 236, 236);
+  background-color: rgb(239, 243, 250);
   position: fixed;
   top: 0;
   right: 0;
@@ -286,6 +291,11 @@ body {
   font-size: 12px;
   font-weight: 600;
   opacity: 0.9;
+}
+.skeleton .parent_container .dynamic_body {
+  background-color: rgb(248, 248, 248);
+  width: 100%;
+  height: 100%;
 }
 
 .skeleton.active .sidebar {
