--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -226,7 +226,7 @@ body {
   flex-direction: row;
   flex-wrap: nowrap;
   width: 100%;
-  padding: 1.35rem 0.75rem 0.85rem 0.75rem;
+  padding: 1.25rem 0.75rem 0.45rem 0.75rem;
   border-bottom: 1.6px solid rgb(236, 236, 236);
   background-color: rgb(239, 243, 250);
   position: fixed;
@@ -252,9 +252,14 @@ body {
   opacity: 0.7;
   margin-left: 0.5rem;
 }
+@media (max-width: 780px) {
+  .skeleton .parent_container .dynamic_head .dynamic_title {
+    font-size: 1rem;
+  }
+}
 .skeleton .parent_container .dynamic_head .dynamic_profile {
   display: flex;
-  justify-content: start;
+  justify-content: end;
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -265,10 +270,12 @@ body {
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
-  margin-left: 2rem;
+  border: 1.6px solid rgb(206, 206, 206);
+  border-radius: 12px;
+  padding: 0.35rem 0.85rem;
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .company_img {
-  width: 38px;
+  width: 30px;
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .company_img img {
   width: 100%;
@@ -283,14 +290,25 @@ body {
   margin-left: 0.45rem;
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .profile_brief > div:nth-child(1) {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 700;
   opacity: 0.9;
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .profile_brief > div:nth-child(2) {
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 600;
   opacity: 0.9;
+}
+@media (max-width: 600px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .company_img {
+    width: 28px;
+  }
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .profile_brief > div:nth-child(1) {
+    font-size: 10px;
+  }
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .profile_brief > div:nth-child(2) {
+    font-size: 8px;
+  }
 }
 .skeleton .parent_container .dynamic_body {
   background-color: rgb(248, 248, 248);
