--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -217,7 +217,7 @@ body{
     .dynamic_head{
       @include flexbox(space-between, center, row);
       width: 100%;
-      padding: 1.35rem .75rem .85rem .75rem;
+      padding: 1.25rem .75rem .45rem .75rem;
       border-bottom: 1.6px solid rgb(236, 236, 236);
       background-color: rgb(239, 243, 250);
       position: fixed;
@@ -239,10 +239,14 @@ body{
         font-weight: 600;
         opacity: .7;
         margin-left: .5rem;
+
+        @media(max-width: 780px){
+          font-size: 1rem;
+        }
       }
 
       .dynamic_profile{
-        @include flexbox(start, center, row);
+        @include flexbox(end, center, row);
 
         // .bell_box{
         //   width: 28px;
@@ -254,10 +258,12 @@ body{
 
         .profile_box{
           @include flexbox(start, center, row);
-          margin-left: 2rem;
+          border: 1.6px solid rgb(206, 206, 206);
+          border-radius: 12px;
+          padding: .35rem .85rem;
           
           .company_img{
-            width: 38px;
+            width: 30px;
 
             img{
               width: 100%;
@@ -270,14 +276,29 @@ body{
             margin-left: .45rem;
 
             & > div:nth-child(1){
-              font-size: 14px;
+              font-size: 12px;
               font-weight: 700;
               opacity: .9;
             }
             & > div:nth-child(2){
-              font-size: 12px;
+              font-size: 10px;
               font-weight: 600;
               opacity: .9;
+            }
+          }
+
+          @media(max-width: 600px){
+            .company_img{
+              width: 28px;
+            }
+
+            .profile_brief{
+              & > div:nth-child(1){
+                font-size: 10px;
+              }
+              & > div:nth-child(2){
+                font-size: 8px;
+              }
             }
           }
         }
