--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -314,6 +314,7 @@ body {
   background-color: rgb(248, 248, 248);
   width: 100%;
   height: 100%;
+  margin-top: 4.8rem;
 }
 
 .skeleton.active .sidebar {
@@ -327,5 +328,27 @@ body {
 }
 .skeleton.active .sidebar .pages .page_link > span:nth-child(2) {
   display: block;
+}
+
+#file-manager {
+  width: 100%;
+}
+#file-manager form {
+  margin-bottom: 1rem;
+}
+#file-manager form input[type=file] {
+  margin-right: 1rem;
+}
+#file-manager #files-list {
+  display: flex;
+  flex-direction: column;
+}
+#file-manager #files-list .file-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+}
+#file-manager #files-list .file-item button {
+  margin-left: 0.5rem;
 }
 /*# sourceMappingURL=main.css.map */
