--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -309,6 +309,7 @@ body{
       background-color: rgb(248, 248, 248);
       width: 100%;
       height: 100%;
+      margin-top: 4.8rem;
     }
   }
 }
