--- a/webApp/views/signup.hbs
+++ b/webApp/views/signup.hbs
@@ -4,8 +4,8 @@
   input[type="email"],
   input[type="password"],
   select {
-      font-size: 1.125rem; /* Larger font size */
-      padding: 0.75rem; /* More padding */
+      font-size: 1.0rem; /* Larger font size */
+      padding: 0.5rem; /* More padding */
       border-width: 2px; /* Thicker border */
   }
 
@@ -32,14 +32,14 @@
       class="flex items-center justify-center px-8 py-8 sm:px-12 lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6"
     >
       <div class="max-w-xl lg:max-w-3xl">
-        <a class="block text-blue-600" href="#">
+        {{!-- <a class="block text-blue-600" href="#">
           <span class="sr-only">Home</span>
           <img
             class="h-8 sm:h-10"
             src="assets/Quant_logo.png" 
             alt="Logo"
           />
-        </a>
+        </a> --}}
 
         <h1 class="mt-6 text-2xl font-bold text-gray-900 sm:text-3xl md:text-4xl">
           Welcome to QuantIQ ⚛️
