--- a/webApp/views/files.hbs
+++ b/webApp/views/files.hbs
@@ -5,7 +5,7 @@
     {{>dynamic_head}}
 
     <div class="dynamic_body">
-      <button id="open-modal-btn">Upload Data</button>
+      <button id="open-modal-btn" style="border: 2px solid rgb(27, 245, 179); color: rgb(6, 59, 59); padding: .5rem 10px; border-radius: 10px;">Upload Data</button>
       {{>data_ingestion}}
     </div>
   </section>
