--- a/webApp/views/partials/dynamic_head.hbs
+++ b/webApp/views/partials/dynamic_head.hbs
@@ -4,21 +4,40 @@
   </div>
 
   <div class="dynamic_profile">
-    {{!-- <div class="bell_box">
+    <div class="bell_box">
       <img src="assets/icons/notification.svg" alt="notification">
-    </div> --}}
+    </div>
 
     <div class="profile_box">
-      <div class="company_img">
-        <img src="assets/icons/organization.svg" alt="company">
+      <div class="p-box-head">
+        <div class="company_img">
+          <img src="assets/icons/account.svg" alt="company">
+        </div>
+
+        <div class="profile_brief">
+          <div>Company Name</div>
+          <div>company@email.com</div>
+        </div>
+
+        <div class="drop_container dropdown-btn">
+          <img src="assets/icons/dropdown.svg" alt="dropdown">
+        </div>
       </div>
 
-      <div class="profile_brief">
-        <div>Company Name</div>
-        <div>company@email.com</div>
-      </div>
+      <div class="p-box-reveal hidden">
+        <div class="mobile-credentials">
+          <div class="name-cred">Company Name</div>
+          <div class="email-cred">company@email.com</div>
+        </div>
 
-      div.
+        <div class="logout_box">
+          <a href="/logout">
+            <img src="assets/icons/logout.svg" alt="logout">
+            <span>Logout</span>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
+
 </div>
