--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -217,7 +217,7 @@ body{
     .dynamic_head{
       @include flexbox(space-between, center, row);
       width: 100%;
-      padding: 1.25rem .75rem .45rem .75rem;
+      padding: 1.25rem .25rem .45rem .75rem;
       border-bottom: 1.6px solid rgb(236, 236, 236);
       background-color: rgb(239, 243, 250);
       position: fixed;
@@ -247,59 +247,178 @@ body{
 
       .dynamic_profile{
         @include flexbox(end, center, row);
+        //margin-right: -0.5rem;
 
-        // .bell_box{
-        //   width: 28px;
-        
-        //   img{
-        //     width: 100%;
-        //   }
-        // }
+        .bell_box{
+          width: 28px;
+          margin-right: 1.25rem;
+
+          img{
+            width: 100%;
+          }
+        }
 
         .profile_box{
-          @include flexbox(start, center, row);
-          border: 1.6px solid rgb(206, 206, 206);
-          border-radius: 12px;
-          padding: .35rem .85rem;
-          
-          .company_img{
-            width: 30px;
+          @include flexbox(center, center, column);
 
-            img{
-              width: 100%;
-              opacity: .85;
-            }
-          }
-
-          .profile_brief{
-            @include flexbox(start, start, column);
-            margin-left: .45rem;
-
-            & > div:nth-child(1){
-              font-size: 12px;
-              font-weight: 700;
-              opacity: .9;
-            }
-            & > div:nth-child(2){
-              font-size: 10px;
-              font-weight: 600;
-              opacity: .9;
-            }
-          }
-
-          @media(max-width: 600px){
+          .p-box-head{
+            @include flexbox(start, center, row);
+            border: 1.6px solid rgb(206, 206, 206);
+            border-radius: 12px;
+            padding: .35rem; 
+            margin-right: .75rem;
+            background-color: #ccc;
+            
             .company_img{
-              width: 28px;
+              width: 30px;
+              border-right: 1.4px solid #808080;
+              padding-right: .25rem;
+
+              // @media(max-width: 600px){
+              //   border-right: 1.4px solid #ccc;
+              //   padding-right: .25rem;
+              // }
+
+              img{
+                width: 100%;
+                opacity: .85;
+              }
             }
 
             .profile_brief{
+              @include flexbox(start, start, column);
+              margin-left: .45rem;
+              border-right: 1.4px solid #ccc;
+              padding-right: .35rem;
+
+              // @media(max-width: 600px){
+              //   display: none;
+              // }
+
               & > div:nth-child(1){
-                font-size: 10px;
+                font-size: 12px;
+                font-weight: 700;
+                opacity: .9;
               }
               & > div:nth-child(2){
-                font-size: 8px;
+                font-size: 10px;
+                font-weight: 600;
+                opacity: .9;
+              }
+              display: none;
+            }
+
+            .drop_container{
+              @include flexbox(center, center);
+              width: 26px;
+              margin-left: .25rem;
+              opacity: .8;
+              transition: .15s ease;
+              
+              img{
+                width: 100%;
+              }
+
+              &:hover{
+                opacity: 1;
+                cursor: pointer;
               }
             }
+            .dropdown-btn.spin{
+              transform: rotateX(180deg);
+            }
+
+            @media(max-width: 600px){
+              .company_img{
+                width: 28px;
+              }
+  
+              // .profile_brief{
+              //   & > div:nth-child(1){
+              //     font-size: 10px;
+              //   }
+              //   & > div:nth-child(2){
+              //     font-size: 8px;
+              //   }
+              // }
+            }
+          }
+
+          .p-box-reveal{
+            border: 1.6px solid #a3a3a3;
+            background-color: #f3f3f3;
+            border-radius: 10px;
+            padding: .8rem .5rem;
+            @include flexbox(start, center, column);
+            width: 150px;
+            position: absolute;
+            top: 5rem; 
+            right: .85rem;
+
+            .mobile-credentials{
+              @include flexbox(center, center, column);
+              width: 100%;
+
+              // @media(min-width: 600px){
+              //   display: none;
+              // }
+
+              & > div:nth-child(1){
+                font-size: 14px;
+                font-weight: 600;
+              }
+              & > div:nth-child(2){
+                font-size: 12px;
+              }
+            }
+
+            .logout_box{
+              width: 100%;
+              margin-top: 1rem;
+
+              // @media(min-width: 600px){
+              //   margin-top: 0;
+              // }
+
+              a{
+                width: 130px;
+                @include flexbox(space-around, center, row);
+                border-radius: 10px;
+                padding: .45rem 1rem;
+                margin: 0 auto;
+                background-color: #cccaca;
+                border: 1.6px solid rgb(15, 15, 15);
+                transition: .2s ease;
+
+                img{
+                  transition: .2s ease;
+                  width: 24px;
+                  opacity: .85;
+                  height: 24px;
+                }
+                span{
+                  transition: .2s ease;
+                  font-size: 14px;
+                  color: rgb(32, 32, 32);
+                  font-weight: 600;
+                }
+
+                &:hover{
+                  background-color: rgb(15, 15, 15);
+                  
+                  img{
+                    opacity: 1;
+                  }
+                  span{
+                    font-size: 14px;
+                    color: rgb(235, 231, 231);
+                  }
+                }
+              }
+            }
+          }
+          .hidden {
+            display: none;
           }
         }
       }
@@ -309,7 +428,8 @@ body{
       background-color: rgb(248, 248, 248);
       width: 100%;
       height: 100%;
-      margin-top: 4.8rem;
+      margin-top: 4.2rem;
+      padding: 1rem .5rem;
     }
   }
 }
