--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -226,7 +226,7 @@ body {
   flex-direction: row;
   flex-wrap: nowrap;
   width: 100%;
-  padding: 1.25rem 0.25rem 0.45rem 0.75rem;
+  padding: 0.8rem 0.25rem 0.45rem 0.75rem;
   border-bottom: 1.6px solid rgb(236, 236, 236);
   background-color: rgb(239, 243, 250);
   position: fixed;
@@ -266,7 +266,17 @@ body {
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .bell_box {
   width: 28px;
-  margin-right: 1.25rem;
+  margin-right: 1rem;
+}
+@media (max-width: 780px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .bell_box {
+    margin-right: 0.75rem;
+  }
+}
+@media (max-width: 380px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .bell_box {
+    margin-right: 0.45rem;
+  }
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .bell_box img {
   width: 100%;
@@ -286,14 +296,24 @@ body {
   flex-wrap: nowrap;
   border: 1.6px solid rgb(206, 206, 206);
   border-radius: 12px;
-  padding: 0.35rem;
+  padding: 0.2rem 0.25rem;
   margin-right: 0.75rem;
   background-color: #ccc;
+}
+@media (max-width: 780px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head {
+    padding: 0.2rem 0.25rem;
+  }
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head .company_img {
   width: 30px;
   border-right: 1.4px solid #808080;
   padding-right: 0.25rem;
+}
+@media (max-width: 600px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head .company_img {
+    width: 26px;
+  }
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head .company_img img {
   width: 100%;
@@ -326,10 +346,15 @@ body {
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 26px;
+  width: 24px;
   margin-left: 0.25rem;
   opacity: 0.8;
   transition: 0.15s ease;
+}
+@media (max-width: 600px) {
+  .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head .drop_container {
+    width: 22px;
+  }
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-head .drop_container img {
   width: 100%;
@@ -358,7 +383,7 @@ body {
   flex-wrap: nowrap;
   width: 150px;
   position: absolute;
-  top: 5rem;
+  top: 4.25rem;
   right: 0.85rem;
 }
 .skeleton .parent_container .dynamic_head .dynamic_profile .profile_box .p-box-reveal .mobile-credentials {
@@ -423,7 +448,7 @@ body {
   background-color: rgb(248, 248, 248);
   width: 100%;
   height: 100%;
-  margin-top: 4.2rem;
+  margin-top: 3rem;
   padding: 1rem 0.5rem;
 }
 
