--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -217,7 +217,7 @@ body{
     .dynamic_head{
       @include flexbox(space-between, center, row);
       width: 100%;
-      padding: 1.25rem .25rem .45rem .75rem;
+      padding: .8rem .25rem .45rem .75rem;
       border-bottom: 1.6px solid rgb(236, 236, 236);
       background-color: rgb(239, 243, 250);
       position: fixed;
@@ -251,7 +251,15 @@ body{
 
         .bell_box{
           width: 28px;
-          margin-right: 1.25rem;
+          margin-right: 1rem;
+
+          @media(max-width: 780px){
+            //width: 26px;
+            margin-right: .75rem;
+          }
+          @media(max-width: 380px){
+            margin-right: .45rem;
+          }
 
           img{
             width: 100%;
@@ -265,19 +273,22 @@ body{
             @include flexbox(start, center, row);
             border: 1.6px solid rgb(206, 206, 206);
             border-radius: 12px;
-            padding: .35rem; 
+            padding: .2rem .25rem;
             margin-right: .75rem;
             background-color: #ccc;
+
+            @media(max-width: 780px){
+              padding: .2rem .25rem;
+            }
             
             .company_img{
               width: 30px;
               border-right: 1.4px solid #808080;
               padding-right: .25rem;
 
-              // @media(max-width: 600px){
-              //   border-right: 1.4px solid #ccc;
-              //   padding-right: .25rem;
-              // }
+              @media(max-width: 600px){
+                width: 26px;
+              }
 
               img{
                 width: 100%;
@@ -310,10 +321,14 @@ body{
 
             .drop_container{
               @include flexbox(center, center);
-              width: 26px;
+              width: 24px;
               margin-left: .25rem;
               opacity: .8;
               transition: .15s ease;
+
+              @media(max-width: 600px){
+                width: 22px;
+              }
               
               img{
                 width: 100%;
@@ -352,7 +367,7 @@ body{
             @include flexbox(start, center, column);
             width: 150px;
             position: absolute;
-            top: 5rem; 
+            top: 4.25rem; 
             right: .85rem;
 
             .mobile-credentials{
@@ -428,7 +443,7 @@ body{
       background-color: rgb(248, 248, 248);
       width: 100%;
       height: 100%;
-      margin-top: 4.2rem;
+      margin-top: 3rem;
       padding: 1rem .5rem;
     }
   }
