--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -7,8 +7,8 @@
     <div class="dynamic_body">
       {{!-- Your sections and divs go here --}}
 
-      <div class="bg-gray-100 p-4">
-        <div class="flex flex-col md:flex-row gap-4 md:ml-[15%]">
+      <div class="p-4">
+        {{!-- <div class="flex flex-col md:flex-row gap-4 md:ml-[15%]">
             <div class="flex flex-col w-full md:w-[500px]">
               
               <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 md:grid-cols-1 gap-2">
@@ -60,6 +60,125 @@
                     </div>
                 </div>
             </div>
+        </div> --}}
+
+        <div class="flex flex-col w-full">
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 md:grid-cols-2 gap-2">
+              <div class="h-32 rounded-lg bg-white shadow-md w-full sm:w-auto bg-purple-200">
+                <div class="w-full">
+                  <h3 class="text-md font-semibold p-1.5">Total Orders</h3>
+                </div>
+                <div>
+                  <p class="pl-2.5 text-3xl font-bold">5,399</p>
+                </div>
+                <div class="flex flex-row gap-4 mt-2">
+                <img src="assets/icons/up.png" alt="reset" class="w-8">
+                <p class="font-semibold">0.5% vs last month</p>
+                </div>
+              </div>
+
+              <div class="h-32 rounded-lg bg-white shadow-md w-full sm:w-auto bg-purple-200">
+                <div class="w-full">
+                  <h3 class="text-md font-semibold p-1.5">Total Sales</h3>
+                </div>
+                <p class="pl-2.5 text-3xl font-bold">5,250</p>
+                <div class="flex flex-row gap-4 mt-2">
+                  <img src="assets/icons/decrease.png" alt="reset" class="w-6">
+                  <p class="font-semibold">0.2% vs last month</p>
+                </div>
+
+              </div>
+
+              <div class="h-32 rounded-lg bg-white shadow-md w-full md:w-full sm:w-auto bg-purple-200">
+                <div>
+                  <h3 class="text-md font-semibold p-1.5">Net Revenue</h3>
+                </div>
+                <div>
+                  <p class="pl-2.5 text-3xl font-bold">$3500</p>
+                </div>
+                <div class="flex flex-row gap-4 mt-2">
+                  <img src="assets/icons/up.png" alt="reset" class="w-8">
+                  <p class="font-semibold">12% vs last month</p>
+                </div>
+              </div>
+
+              <div class="h-32 rounded-lg bg-white shadow-md w-full md:w-full sm:w-auto bg-purple-200">
+                <div>
+                  <h3 class="text-md font-semibold p-1.5">New Orders</h3>
+                </div>
+                <div>
+                  <p class="pl-2.5 text-3xl font-bold">45</p>
+                </div>
+                <div class="flex flex-row gap-4 mt-2">
+                  <img src="assets/icons/up.png" alt="reset" class="w-8">
+                  <p class="font-semibold">0.2% vs last month</p>
+                </div>
+              </div>
+          </div>
+
+          <div class="flex flex-col md:flex-row gap-4 mt-4 lg:flex-row">
+            <div class=" w-full md:w-7/12 h-64 border-2 border-black rounded-lg"></div>
+
+            <div class="flex flex-col gap-3 w-full md:w-5/12 lg:w-5/12 h-64">
+              <div class="flex flex-row h-1/2 gap-3">
+                <div class="w-7/12 flex flex-col bg-purple-200">
+                  <img src="assets/icons/group.png" alt="reset" class="w-12 pl-4">
+                  <p class="pl-4 text-md font-semibold">New Customers</p>
+                  <p class="pl-4 font-bold text-lg">400 <span class="text-red-800 text-sm">-5%</span></p>
+                  <p class="pl-4 text-sm">Last Week</p>
+                </div>
+                <div class="w-7/12 border-2 border-black"></div>
+              </div>
+
+              <div class="w-full h-1/2">
+                <img src="assets/linechart.png" alt="reset" class="w-full h-full pl-4 pt-2 pr-4 bg-purple-200">
+              </div>
+            </div>
+          </div>
+
+          <div class="flex flex-col md:flex-row lg:flex-row gap-4 mt-4">
+            <div class="w-full md:w-7/12 lg:w-7/12 h-64 rounded-lg bg-purple-200">
+              <h3 class="text-lg font-bold p-1.5">Customer List</h3>
+              <table class="w-11/12 mt-4 ml-4">
+                <tr class="border-b border-t border-black">
+                  <th class="p-2 text-left font-semibold flex flex-row">
+                    <p>Name</p>    
+                    <div class="flex flex-col items-center w-1/4 h-8 gap-0">
+                      <span id="upIndicator" class="text-xs opacity-50">▲</span>
+                      <span id="downIndicator" class="text-xs opacity-40">▼</span>
+                    </div>
+                  </th>
+                  <th class="p-2 text-left font-semibold ">
+                    <p>Deals</p>
+                    {{!-- <span class="flex flex-col items-center w-1/4 h-8 gap-0">
+                      <span id="upIndicator" class="text-xs opacity-50">▲</span>
+                      <span id="downIndicator" class="text-xs opacity-40">▼</span>
+                    </span> --}}
+                  </th>
+                  <th class="p-2 text-center font-semibold">Total Deal Value</th>
+                </tr>
+                <tr class="border-b border-black">
+                  <td class="p-2 text-left flex flex-row gap-2"><img src="assets/passport1.jpeg" alt="" class="w-8 h-8 rounded-2xl"><p>Alfreds Futterkiste</p> </td>
+                  <td class="p-2 text-left">5,000</td>
+                  <td class="p-2 text-center">$10,000</td>
+                </tr>
+                <tr class="border-b border-black">
+                  <td class="p-2 text-left flex flex-row gap-2"><img src="assets/passport2.jpeg" alt="" class="w-8 h-8 rounded-2xl"><p>maxwell rodgers</p></td>
+                  <td class="p-2 text-left"> 4,500</td>
+                  <td class="p-2 text-center">$8,000</td>
+                <tr class="">
+                  <td class="p-2 text-left flex flex-row gap-2"><img src="assets/passport3.jpeg" alt="" class="w-8 h-8 rounded-2xl"><p>Centro Moctezuma</p></td>
+                  <td class="p-2 text-left"> 3,900</td>
+                  <td class="p-2 text-center">$7,800</td>
+                </tr>
+              </table>
+            </div>
+
+            <div class="w-full md:w-5/12 lg:w-7-12 h-64 flex flex-col md:flex-row lg:flex-row gap-2">
+              <div class="w-full md:w-5/12 lg:w-7/12 border-2 border-black rounded-lg h-full"></div>
+              <div class="w-full md:w-5/12 lg:w-7/12 border-2 border-black rounded-lg h-full"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
